# clapcomp

./: .travis.yml  Cargo.toml  LICENSE  README.rst  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: arguments.yml  cli.yml  main.rs
