[package]
name = "clapcomp"
version = "0.1.3"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "MIT"
readme = "README.rst"
description = "clap completion generator as command"
repository = "https://github.com/wdv4758h/clapcomp/"
keywords = ["clap", "completion"]

[dependencies]
clap = { version = "2.16.2", features = ["yaml"] }

[profile.release]
lto = true
